SA new inference time measurement on new models

--- a/NLP/dev-workspace/sa/eval_inference_time_all.ipynb
+++ b/NLP/dev-workspace/sa/eval_inference_time_all.ipynb
@@ -48,6 +48,7 @@
     "\n",
     "from pathlib import Path\n",
     "from itertools import product\n",
+    "from datetime import datetime\n",
     "\n",
     "output_folder = Path('eval_graphs')\n",
     "eval_inference_time_output_folder = output_folder / 'inference_time'\n",
@@ -63,7 +64,11 @@
     "glove_cnn_prefix = 'glove-cnn-20000'\n",
     "bert_prefix = 'bert-finetune'\n",
     "\n",
-    "DATASET_SIZE = 240\n",
+    "tfidf_rf_date_suffix = datetime(2024, 2, 26)\n",
+    "glove_cnn_date_suffix = datetime(2024, 2, 26)\n",
+    "bert_date_suffix = datetime(2024, 1, 18)\n",
+    "\n",
+    "DATASET_SIZE = 480\n",
     "DATASET_BALANCED = True\n",
     "\n",
     "EVAL_INFERENCE_TIME_FOLDER = 'inference_times'\n",
@@ -103,12 +108,14 @@
     "    bert_inference_times[eval_device] = {}\n",
     "\n",
     "# load tfidf-rf inference times\n",
-    "for folder, prefix, inf_times_dict in zip([tfidf_rf_folder, glove_cnn_folder, bert_folder],\n",
-    "                                          [tfidf_rf_prefix, glove_cnn_prefix, bert_prefix],\n",
-    "                                          [tfidf_rf_inference_times, glove_cnn_inference_times, bert_inference_times]):\n",
+    "for folder, prefix, datetime_suffix, inf_times_dict in zip(\n",
+    "    [tfidf_rf_folder, glove_cnn_folder, bert_folder],\n",
+    "    [tfidf_rf_prefix, glove_cnn_prefix, bert_prefix],\n",
+    "    [tfidf_rf_date_suffix, glove_cnn_date_suffix, bert_date_suffix],\n",
+    "    [tfidf_rf_inference_times, glove_cnn_inference_times, bert_inference_times]):\n",
     "    for eval_folder, eval_device in load_pairs:\n",
     "        # get the folder path\n",
-    "        model_folder = Path.joinpath(folder, f'{prefix}_{DATASET_SIZE}k_{\"bal\" if DATASET_BALANCED else \"imbal\"}')\n",
+    "        model_folder = Path.joinpath(folder, f'{prefix}_{DATASET_SIZE}k_{\"bal\" if DATASET_BALANCED else \"imbal\"}_{datetime_suffix.strftime(\"%Y-%m-%d\")}')\n",
     "\n",
     "        # get the report folder path\n",
     "        eval_time_folder = Path.joinpath(model_folder, f'{eval_folder}_{eval_device}').resolve()\n",
@@ -117,26 +124,26 @@
     "        # load the inference times which stored in numpy array\n",
     "        # different model has their own way of storing inference times\n",
     "        if prefix == tfidf_rf_prefix:\n",
-    "            sklearn_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_2023-12-20_sklearn_inf_times.npy'))\n",
-    "            onnx_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_2023-12-20_onnx_inf_times.npy'))\n",
+    "            sklearn_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_inf_times.npy'))\n",
+    "            onnx_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_onnx_inf_times.npy'))\n",
     "\n",
     "            tfidf_rf_inference_times[eval_device]['sklearn'] = sklearn_inf_times\n",
     "            tfidf_rf_inference_times[eval_device]['onnx'] = onnx_inf_times\n",
     "\n",
     "        elif prefix == glove_cnn_prefix:\n",
-    "            glove_cnn_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_2023-12-20_keras_inf_times.npy'))\n",
-    "            onnx_keras_vect_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_2023-12-20_onnx_keras_vect_times.npy'))\n",
-    "            onnx_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_2023-12-20_onnx_inf_times.npy'))\n",
+    "            glove_cnn_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_keras_inf_times.npy'))\n",
+    "            onnx_keras_vect_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_onnx_keras_vect_times.npy'))\n",
+    "            onnx_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_onnx_inf_times.npy'))\n",
     "\n",
     "            glove_cnn_inference_times[eval_device]['keras'] = glove_cnn_inf_times\n",
     "            glove_cnn_inference_times[eval_device]['onnx_keras_vect'] = onnx_keras_vect_times\n",
     "            glove_cnn_inference_times[eval_device]['onnx'] = onnx_inf_times\n",
     "\n",
     "        elif prefix == bert_prefix:\n",
-    "            bert_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_2023-12-18_hg_inf_times.npy'))\n",
-    "            bert_vect_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_2023-12-18_hg_vect_times.npy'))\n",
-    "            onnx_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_2023-12-18_onnx_inf_times.npy'))\n",
-    "            onnx_vect_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_2023-12-18_onnx_vect_times.npy'))\n",
+    "            bert_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_hg_inf_times.npy'))\n",
+    "            bert_vect_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_hg_vect_times.npy'))\n",
+    "            onnx_inf_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_onnx_inf_times.npy'))\n",
+    "            onnx_vect_times = np.load(Path.joinpath(eval_time_folder, f'{model_folder.name}_onnx_vect_times.npy'))\n",
     "\n",
     "            bert_inference_times[eval_device]['bert'] = bert_inf_times\n",
     "            bert_inference_times[eval_device]['bert_vect'] = bert_vect_times\n",
