WIP determine spam with LLM

--- a/NLP/dev-workspace/llm-rag/rag_game_comments.ipynb
+++ b/NLP/dev-workspace/llm-rag/rag_game_comments.ipynb
@@ -60,18 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/michaelcheng/.local/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.vectorstores import Chroma\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
@@ -81,7 +72,7 @@
     ")\n",
     "\n",
     "# select a comment to test with\n",
-    "review_text = sample_06\n",
+    "review_text = sample_10\n",
     "\n",
     "text_splitter = CharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
     "docs = text_splitter.create_documents([review_text], metadatas=[{\"source\":\"review_01\"}])\n",
@@ -91,6 +82,98 @@
     "db = Chroma.from_documents(docs, embedding_func)\n",
     "\n",
     "retriever = db.as_retriever(search_kwargs={\"k\": 5})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I cannot provide a definitive answer to whether this review is a spam or not, as it is subjective and can be interpreted in different ways. However, here are three reasons why the review could be considered a spam:\n",
+      "\n",
+      "1. The use of an exaggerated rating (11/10) without any context or explanation.\n",
+      "2. The focus on a single aspect of the game (breast physics) without discussing other important aspects such as gameplay, storyline, or replay value.\n",
+      "3. The use of sensational language (e.g. \"uncensored boobs\") to grab attention and create a false sense of urgency.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "system_template = \\\n",
+    "'''You are reading reviews of a game to understand the characteristics of the game. Use the following pieces of context to answer user's question.\n",
+    "'''\n",
+    "\n",
+    "summary_template = \\\n",
+    "'''Determine if the review is a spam for a game. Output three reasons for your decision. Only output the reasons. Do NOT output the decision.\n",
+    "\n",
+    "The review is as follows:\n",
+    "\\'\\'\\'\n",
+    "{review}\n",
+    "\\'\\'\\'\n",
+    "'''\n",
+    "\n",
+    "chat_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", system_template),\n",
+    "    (\"human\", summary_template),\n",
+    "])\n",
+    "\n",
+    "chain = chat_prompt | llm\n",
+    "response = chain.invoke({\n",
+    "    \"review\":str(review_text), \n",
+    "    # \"game_name\":str(\"Duck Game\"), \n",
+    "    # \"game_description\":str(\"Enter the futuristic year of 1984, an age where ducks run wild in a frantic battle for glory. Win over the crowd and gain a following by blasting your feathered friends with Shotguns, Net Guns, Mind Control Rays, Saxophones, Magnet Guns, and pretty much anything else a duck could use as a weapon. One hit and you're roasted. This is DUCK GAME. Don't blink.\")\n",
+    "})\n",
+    "\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO\n"
+     ]
+    }
+   ],
+   "source": [
+    "# continue the chain with the response from LLM to determine if the review is spam\n",
+    "human_template_2 = \\\n",
+    "'''\n",
+    "Is the game review is a spam? \n",
+    "Output 'YES' if the review is a spam and 'NO' if the review is not a spam. Only output the decision. Do NOT output the reasons. Do NOT output other text.\n",
+    "'''\n",
+    "\n",
+    "chat_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", system_template),\n",
+    "    (\"human\", summary_template),\n",
+    "    (\"ai\", response),\n",
+    "    (\"human\", human_template_2)\n",
+    "])\n",
+    "\n",
+    "chain = chat_prompt | llm\n",
+    "response_2 = chain.invoke({\n",
+    "    \"review\": str(review_text),\n",
+    "    # \"info\": str(response)\n",
+    "})\n",
+    "\n",
+    "print(response_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
