new SA prompt & tests for mistralai api
new SA extraction from summarised aspects sentence, determine the sentiment of the review in each aspect

tidy the code to make it more-or-less same with main branch

--- a/NLP/dev-workspace/llm-rag/rag_mistralapi_test.ipynb
+++ b/NLP/dev-workspace/llm-rag/rag_mistralapi_test.ipynb
@@ -356,6 +356,33 @@
     "embedding_stats = embedding_stats_deque.popleft()\n",
     "print(embedding_stats)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'prompt_tokens': 319, 'total_tokens': 319, 'completion_tokens': 0}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(embedding_stats[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
