--- a/NLP/dev-workspace/llm-rag/llm_summary_project/review_analysis_prompting.ipynb
+++ b/NLP/dev-workspace/llm-rag/llm_summary_project/review_analysis_prompting.ipynb
@@ -249,6 +249,9 @@
    "outputs": [],
    "source": [
     "# prompt constants\n",
+    "# mistral_ai suggested model selection: https://docs.mistral.ai/guides/model-selection/\n",
+    "# prompt tutorial(?): https://python.langchain.com/docs/use_cases/csv\n",
+    "# prompt example: https://smith.langchain.com/public/b1309290-7212-49b7-bde2-75b39a32b49a/r/880c5250-5409-4346-8315-c30bc9638e18\n",
     "\n",
     "SYSTEM_PROMPT_TEMPLATE = \\\n",
     "'''You have access to a pandas dataframe `df`. {description_of_the_table}\n",
