create topic freq df from api

--- a/NLP/dev-workspace/llm-rag/llm_summary_project/review_analysis_processing.ipynb
+++ b/NLP/dev-workspace/llm-rag/llm_summary_project/review_analysis_processing.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
        "  'FEMALE': 0},\n",
        " 'percentile': 91.6667,\n",
        " 'name': 'Cyberpunk 2077 Phantom Liberty',\n",
-       " 'generatedAt': '2024-03-23 03:25:40',\n",
+       " 'generatedAt': '2024-03-26 09:12:31',\n",
        " 'publisher': 'CDProjekt Red',\n",
        " 'sentimentReviewsByAge': {'POSITIVE': {'20-29': 7,\n",
        "   'N/A': 5,\n",
@@ -1410,7 +1410,7 @@
        " 'numberOfFavourites': 3}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1529,7 @@
        "9       N/A      6"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
        "4          N/A      6"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1693,7 @@
        "2       N/A      0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1771,7 @@
        "1   POSITIVE       N/A      5"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1945,12 +1945,14 @@
        "14          N/A       N/A      0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from itertools import product\n",
+    "\n",
     "sentimentByGender_df_template = pd.DataFrame(product(\n",
     "    GENDERS, ['POSITIVE', 'NEGATIVE', \"N/A\"], [0]\n",
     "), columns=['gender', 'sentiment', 'count'])\n",
@@ -1960,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2026,7 +2028,7 @@
        "1  POSITIVE  UNDISCLOSED      1"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2050,6 +2052,90 @@
     "\n",
     "sentimentByGender_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>Topic Name</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Cyberpunk DLC - Great Expansion</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Good game</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>Repetitive but enjoyable experience with limit...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Topic                                         Topic Name  Count\n",
+       "0     0                    Cyberpunk DLC - Great Expansion      1\n",
+       "1     3                                          Good game      2\n",
+       "2    -1  Repetitive but enjoyable experience with limit...      1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# topic Frequency\n",
+    "\n",
+    "topicFreq = []\n",
+    "\n",
+    "for topic, val in return_json['topicFrequency'].items():\n",
+    "    topicFreq.append((topic, val['freq'], val['name']))\n",
+    "\n",
+    "topicFreq_df = pd.DataFrame(topicFreq, columns=['Topic', 'Count', 'Topic Name'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
